--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,30 +1,21 @@
 {% extends "base.html" %}
 
+{%
+ set username = session.get('username')
+%}
+
 {% block content %}
 <div class="d-flex justify-content-between" style="gap: 2rem;">
         <div class="flex-grow-1 me-3">
             <h1 class="text-center my-3">Welcome, {{ username }}!</h1>
-            <a href="{{ static }}" class="btn btn-primary mb-3">Create a Room</a>
-            <form action="{{ static }}" method="POST" class="mb-3">
+            <form action="{{ url_for('.join_room') }}" method="POST" class="mb-3">
                 <div class="input-group mb-3">
-                    <input type="text" name="room_number" class="form-control" placeholder="Enter Room Number" aria-label="Room Number" required>
+                    <input type="text" name="room_name" class="form-control" placeholder="Enter Room Name" aria-label="Room Name" required>
                     <button class="btn btn-secondary" type="submit">Join Room</button>
                 </div>
             </form>
-            <a href="{{ static }}" class="btn btn-danger">Logout</a>
+            <a href="{{ url_for('.logout') }}" class="btn btn-danger">Logout</a>
         </div>
-        <div class="leaderboard border rounded p-3" style="max-height: 400px; overflow-y: auto;">
-            <h2 class="text-center">Leaderboard</h2>
-            <ul class="list-group">
-                {% for user in users %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{ user.username }}
-                    <span class="badge bg-primary rounded-pill">{{ user.wins }} Wins</span>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-
     </div>
 {% endblock %}
 
