--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,13 +6,14 @@
     <form method="POST" class="form-signin">
         <div class="form-group">
             <label for="username" class="sr-only">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Username" autofocus>
         </div>
         <div class="form-group">
             <label for="password" class="sr-only">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password">
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" name="action" value="login">Login</button>
+        <button class="btn btn-lg btn-secondary btn-block" type="submit" name="action" value="guest_login">Login as guest</button>
     </form>
     <p class="mt-2">Don't have an account? <a href="{{ url_for('.register') }}" class="text-primary">Register here</a></p>
 {% endblock %}
